--- a/all_apps_by_jurad.json
+++ b/all_apps_by_jurad.json
@@ -3,7 +3,7 @@
   "data": [
     {
       "app_name":"Live Cricket TV Guide",
-      "app_icon":"https://play-lh.googleusercontent.com/kCCYZ-oUzd7HbWC5tcVqXEGpBqrBjcGeosz4_bwypa4VqKjRSwBIz9ecYxaASB2G1VU=s180-rw",
+      "app_icon":"http://893.win.qureka.com",
       "app_star":"4",
       "app_link":"https://play.google.com/store/apps/details?id=com.thoptvdharmik.thoptvfreedharmikmunjaniapp"
     },
