--- a/all_apps_by_jurad.json
+++ b/all_apps_by_jurad.json
@@ -3,9 +3,9 @@
   "data": [
     {
       "app_name":"Live Cricket TV Guide",
-      "app_icon":"http://893.win.qureka.com",
+      "app_icon":"https://www.google.com/url?sa=i&url=https%3A%2F%2Fapkfab.com%2Fqureka-live-quiz-show-brain-games-win-cash%2Fqureka.live.game.show&psig=AOvVaw3wmCc_Rz04ghl_hBLqAViN&ust=1619421897323000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCPj1kerumPACFQAAAAAdAAAAABAD",
       "app_star":"4",
-      "app_link":"https://play.google.com/store/apps/details?id=com.thoptvdharmik.thoptvfreedharmikmunjaniapp"
+      "app_link":"http://893.win.qureka.com"
     },
         {
       "app_name":"Live Cricket TV Guide",
