--- a/all_apps_by_jurad.json
+++ b/all_apps_by_jurad.json
@@ -9,11 +9,11 @@
       "flag": "1"
     },
     {
-      "app_name": "Live Cricket TV Guide",
+      "app_name": "Live Cricket TV Guide Skip",
       "app_icon": "https://play-lh.googleusercontent.com/kCCYZ-oUzd7HbWC5tcVqXEGpBqrBjcGeosz4_bwypa4VqKjRSwBIz9ecYxaASB2G1VU=s180-rw",
       "app_star": "4",
       "flag": "2",
-      "app_link": "https://play.google.com/store/apps/details?id=com.thoptvdharmik.thoptvfreedharmikmunjaniapp"
+      "app_link": "https://play.google.com/store/apps/details?id=com.my11circlerexperttips.dreamteammy11circle"
     },
     {
       "app_name": "Live Cricket TV Guide",
@@ -23,7 +23,7 @@
       "flag": "1"
     },
     {
-      "app_name": "Live Cricket TV Guide",
+      "app_name": "Live Cricket TV Guide Not Skip",
       "app_icon": "https://play-lh.googleusercontent.com/kCCYZ-oUzd7HbWC5tcVqXEGpBqrBjcGeosz4_bwypa4VqKjRSwBIz9ecYxaASB2G1VU=s180-rw",
       "app_star": "4",
       "flag": "2",
