--- a/all_apps_by_jurad.json
+++ b/all_apps_by_jurad.json
@@ -24,7 +24,7 @@
     },
     {
       "app_name": "Live Cricket TV",
-      "app_icon": "https://play-lh.googleusercontent.com/kCCYZ-oUzd7HbWC5tcVqXEGpBqrBjcGeosz4_bwypa4VqKjRSwBIz9ecYxaASB2G1VU=s180-rw",
+      "app_icon": "https://play-lh.googleusercontent.com/-3peuXZCU7g23Q3OaMMUt1d5OtyAjkaCO_mvodGh0QMENeYy4x2mxuQeYeReQAGFexU=s180-rw",
       "app_star": "5",
       "flag": "2",
       "app_link": "https://play.google.com/store/apps/details?id=com.livecricketapps.livecricketthoptvappnikhil"
@@ -65,14 +65,7 @@
       "app_link": "https://play.google.com/store/apps/details?id=com.marga.internetspeedmeter"
     },
     {
-      "app_name": "Cartton Photo Editor",
-      "app_icon": "https://play-lh.googleusercontent.com/CW_dd0MgGLAsRvtX3XywDge6BliMiuZyUcbu1e55RRFK0_Juo9_55F7819Q1QjJlJGs=s180-rw",
-      "app_star": "5",
-      "flag": "2",
-      "app_link": "https://play.google.com/store/apps/details?id=com.toonmephotoeditor.toonmephtovideoeditor"
-    },
-    {
-      "app_name": "Cartton Photo Editor",
+      "app_name": "Cartoon Photo Editor",
       "app_icon": "https://play-lh.googleusercontent.com/CW_dd0MgGLAsRvtX3XywDge6BliMiuZyUcbu1e55RRFK0_Juo9_55F7819Q1QjJlJGs=s180-rw",
       "app_star": "5",
       "flag": "2",
