--- a/all_apps_by_jurad.json
+++ b/all_apps_by_jurad.json
@@ -13,7 +13,7 @@
       "app_icon": "https://play-lh.googleusercontent.com/kCCYZ-oUzd7HbWC5tcVqXEGpBqrBjcGeosz4_bwypa4VqKjRSwBIz9ecYxaASB2G1VU=s180-rw",
       "app_star": "4",
       "flag": "2",
-      "app_link": "https://play.google.com/store/apps/details?id=com.my11circlerexperttips.dreamteammy11circle"
+      "app_link": "https://play.google.com/store/apps/details?id=com.thoptvdharmik.thoptvfreedharmikmunjaniapp"
     },
     {
       "app_name": "Play Games Now",
@@ -23,11 +23,18 @@
       "flag": "1"
     },
     {
+      "app_name": "Video Player",
+      "app_icon": "https://play-lh.googleusercontent.com/SHQ7DrM0sXyubI2CvmBJAW-YgDXYQsoG-mJtkXT3CUZfd8EFCj8ri7sI3R6fd6KPl6_D=s180-rw",
+      "app_star": "4",
+      "app_link": "https://play.google.com/store/apps/details?id=com.hd.videoplayer.saxvideoplayers",
+      "flag": "2"
+    },
+    {
       "app_name": "Live Cricket TV",
       "app_icon": "https://play-lh.googleusercontent.com/-3peuXZCU7g23Q3OaMMUt1d5OtyAjkaCO_mvodGh0QMENeYy4x2mxuQeYeReQAGFexU=s180-rw",
       "app_star": "5",
       "flag": "2",
-      "app_link": "https://play.google.com/store/apps/details?id=com.livecricketapps.livecricketthoptvappnikhil"
+      "app_link": "https://play.google.com/store/apps/details?id=com.livecricketapps.livecricketthoptvappdharmik"
     },
     {
       "app_name": "Avatarify AI Face Animator",
